--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,23 @@ body{
 html {
   scroll-behavior: smooth;
 }
+.center-text-loader {
+  min-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: #444;
+}
+
+.center-text-loader h2 {
+  font-size: 22px;
+  margin-bottom: 6px;
+  font-weight: 600;
+}
+
+.center-text-loader p {
+  font-size: 14px;
+  color: #777;
+}
