--- a/src/CSS/Home_NavBar.css
+++ b/src/CSS/Home_NavBar.css
@@ -58,17 +58,19 @@
 .loginBtn {
   padding: 8px 16px;
   border-radius: 6px;
-  background: white;
-  color: black !important;
-  font-weight: 600;
+  border: 1px solid white;
+  background: transparent;
+  color: white;
+  cursor: pointer;
 }
 
 .logoutBtn {
   padding: 8px 16px;
   border-radius: 6px;
-  background: white;
-  color: black !important;
-  font-weight: 600;
+  border: 1px solid white;
+  background: transparent;
+  color: white;
+  cursor: pointer;
 }
 .createBtn {
   padding: 8px 16px;
